--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@unocss/astro": "^0.55.2",
+    "@unocss/preset-wind": "^0.55.3",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.5"
   }
