--- a/package.json
+++ b/package.json
@@ -8,21 +8,19 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "devDependencies": {
+  "dependencies": {
     "@astrojs/mdx": "^0.8.3",
     "@astrojs/preact": "^2.2.2",
+    "reading-time": "^1.5.0",
+    "sharp": "^0.32.5",
+    "@unocss/astro": "^0.55.2",
+    "@unocss/preset-attributify": "^0.55.3",
+    "@unocss/preset-wind": "^0.55.3",
     "@unocss/reset": "^0.55.2",
     "astro": "^2.10.14",
     "astro-compressor": "^0.4.0",
     "postcss": "^8.4.28",
     "preact": "^10.6.5",
-    "rehype-external-links": "^2.0.0",
-    "unocss": "^0.55.2"
-  },
-  "dependencies": {
-    "@unocss/astro": "^0.55.2",
-    "@unocss/preset-wind": "^0.55.3",
-    "reading-time": "^1.5.0",
-    "sharp": "^0.32.5"
+    "rehype-external-links": "^2.0.0"
   }
 }
