--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^0.8.3",
     "@astrojs/preact": "^2.2.2",
+    "@astrojs/rss": "^3.0.0",
     "@unocss/astro": "^0.55.2",
     "@unocss/preset-attributify": "^0.55.3",
     "@unocss/preset-wind": "^0.55.3",
