feat: automatic last modified date for /now and blog posts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "fmt": "prettier -w .",
-    "build": "astro build",
+    "build": "npm run fmt && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -25,6 +25,10 @@
     "rehype-external-links": "^2.0.0",
     "sharp": "^0.32.5",
     "swr": "^2.2.2"
+  },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
   },
   "devDependencies": {
     "@types/node": "^20.6.2",
