--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "astro-site",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +14,7 @@
     "@astrojs/mdx": "^0.8.3",
     "@astrojs/preact": "^2.2.2",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/svelte": "^4.0.2",
     "@unocss/astro": "^0.55.2",
     "@unocss/preset-attributify": "^0.55.3",
     "@unocss/preset-wind": "^0.55.3",
@@ -24,6 +26,7 @@
     "reading-time": "^1.5.0",
     "rehype-external-links": "^2.0.0",
     "sharp": "^0.32.5",
+    "svelte": "^4.2.0",
     "swr": "^2.2.2"
   },
   "overrides": {
