--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "fmt": "prettier -w .",
-    "build": "npm run fmt && astro build",
+    "fmt": "deno fmt .",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -26,15 +26,13 @@
     "reading-time": "^1.5.0",
     "rehype-external-links": "^2.0.0",
     "sharp": "^0.32.5",
-    "svelte": "^4.2.0",
-    "swr": "^2.2.2"
+    "svelte": "^4.2.0"
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
     "react-dom": "npm:@preact/compat@latest"
   },
   "devDependencies": {
-    "@types/node": "^20.6.2",
-    "prettier": "^3.0.3"
+    "@types/node": "^20.6.2"
   }
 }
